<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/zone_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="#FFF9EB">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo"
                android:text="@string/streaks"
                android:textColor="#a45e00"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/controllerStreak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/current_streak"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/techniqueStreak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/technique_sessions"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/motivational_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/motivational_msg"
                android:textColor="#a45e00"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp">

            <ImageView
                android:id="@+id/flame"
                android:layout_width="0dp"
                android:layout_height="57dp"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:background="@drawable/bg_streaks_card"
                app:srcCompat="@drawable/ic_flame" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>